# burrtools

./: CMakeLists.txt  INSTALL  README
src/: CMakeLists.txt
src/gui/: CMakeLists.txt  mainwindow.cpp
src/halfedge/: modifiers.cpp  modifiers.h
src/help/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lua/: luaclass.cpp  luaclass.h
